added menu link to Communicate

--- a/ticonet/Views/Shared/_Layout.cshtml
+++ b/ticonet/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink(@DEBS.Translate("menu.Home"), "Index", "Home")</li>
+                    <li>@Html.ActionLink(@DEBS.Translate("menu.Communicate"), "Index", "MessageModule")</li>
                     <li>@Html.ActionLink(@DEBS.Translate("menu.students"), "Index", "tblStudent")</li>
                     @*<li>@Html.ActionLink(@DEBS.Translate("menu.Insets"), "Index", "Insets")</li>*@
                     <li class="dropdown">
