adaptation into Hebrew: index.cshtml, _ngMFilters.cshtml

--- a/ticonet/Views/MessageModule/Index.cshtml
+++ b/ticonet/Views/MessageModule/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using DEBS = Business_Logic.DictExpressionBuilderSystem
+
+@{
     Layout = null;
 }
 <!DOCTYPE html>
@@ -6,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message Module</title>
+    <title>@DEBS.Translate("MessageModule.Message Module")</title>
     @Styles.Render("~/bundles/MessagesModule")
     <link href="~/Content/AwaitLayer.css" rel="stylesheet" />
     <link href="~/Content/CodeArea.css" rel="stylesheet" />
@@ -63,7 +65,7 @@
                         <i style="padding:0 10px" 
                            class="glyphicon glyphicon-cog iconclick" 
                            ng-click="va.showSettings=!va.showSettings">
-                        </i> Mailing Module
+                        </i> @DEBS.Translate("MessageModule.Mailing Module")
                     </div>
                 </div>
                 
@@ -72,17 +74,17 @@
                 <!-- Settings Window MOCK -->
                 <div class="settings-window ngan-fade-mid txt-c-grmore" ng-if="va.showSettings">
                     <div class="txt-s-huge txt-c-base">
-                        Settings
+                        @DEBS.Translate("MessageModule.Settings")
                     </div>
                     <div class="txt-s-med txt-c-gr bot-bord">
-                        Mail service
+                        @DEBS.Translate("MessageModule.Mail service")
                     </div>
-                    <div>sender adress</div>
-                    <div>port...</div>
+                    <div>@DEBS.Translate("MessageModule.Sender address")</div>
+                    <div>@DEBS.Translate("MessageModule.Port")</div>
                     <div class="txt-s-med txt-c-gr bot-bord">
-                        Sms service
+                        @DEBS.Translate("MessageModule.Sms service")
                     </div>
-                    <div>sender adress</div>
+                    <div>@DEBS.Translate("MessageModule.Sender address")</div>
                     <div>...</div>
                 </div>
 
@@ -92,7 +94,7 @@
                         <a class="asimple" ng-click="va.filters_folded=!va.filters_folded">
                             <i ng-class="{'turn90': !va.filters_folded}" class="rotable glyphicon glyphicon-play"></i>
                         </a>
-                        Stored Filters
+                        @DEBS.Translate("MessageModule.Stored Filters")
                     </span>
 
                     <div class="unfold-block" ng-if="!va.filters_folded">
@@ -107,7 +109,7 @@
                         <a class="asimple" ng-click="va.templates_folded=!va.templates_folded">
                             <i ng-class="{'turn90': !va.templates_folded}" class="rotable glyphicon glyphicon-play"></i>
                         </a>
-                        Templates
+                        @DEBS.Translate("MessageModule.Templates")
                     </span>
 
                     <div class="unfold-block" ng-if="!va.templates_folded">
@@ -122,7 +124,7 @@
                         <a class="asimple" ng-click="va.mails_folded=!va.mails_folded">
                             <i ng-class="{'turn90': !va.mails_folded}" class="rotable glyphicon glyphicon-play"></i>
                         </a>
-                        Schedules
+                        @DEBS.Translate("MessageModule.Schedules")
                     </span>
                     <div class="unfold-block" ng-if="!va.mails_folded">
                         @Html.Partial("_ngSchedules")
@@ -135,7 +137,7 @@
                         <a class="asimple" ng-click="va.reports_folded=!va.reports_folded">
                             <i ng-class="{'turn90': !va.reports_folded}" class="rotable glyphicon glyphicon-play"></i>
                         </a>
-                        Reports
+                        @DEBS.Translate("MessageModule.Reports")
                     </span>
 
                     <div class="unfold-block" ng-if="!va.filters_folded">
