--- a/ticonet/Views/MessageModule/_ngSchedules.cshtml
+++ b/ticonet/Views/MessageModule/_ngSchedules.cshtml
@@ -1,4 +1,6 @@
-﻿<div ng-controller="SendMessagesController"
+﻿@using DEBS = Business_Logic.DictExpressionBuilderSystem
+
+<div ng-controller="SendMessagesController"
      data-ng-init="init({
         urls: {
             gettemplates: '@Url.Action("Fetch","Templates")',
@@ -66,7 +68,7 @@
         <!-- Grid/Enumeration -->
         <div class="slideable" ng-if="va.cursched===null">
             <div>
-                <a ng-click="CreateSched()">create new</a>
+                <a ng-click="CreateSched()">@DEBS.Translate("MessageModule.create new")</a>
             </div>
 
             <!-- Grid/Enumeration Settings -->
@@ -75,12 +77,12 @@
                     <div class="txt-anim hover-highlight clickable txt-c-gr" 
                           ng-click="va.gridSettings.IsSms=!va.gridSettings.IsSms; RefetchSchedules()">
                         <i ng-class="va.gridSettings.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" 
-                           class="glyphicon"></i> sms
+                           class="glyphicon"></i> @DEBS.Translate("MessageModule.sms")
                     </div>
                     <div class="txt-anim hover-highlight clickable txt-c-gr"
                           ng-click="va.gridSettings.IsEmail=!va.gridSettings.IsEmail; RefetchSchedules()">
                         <i ng-class="va.gridSettings.IsEmail ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'"
-                           class="glyphicon"></i> mail
+                           class="glyphicon"></i> @DEBS.Translate("MessageModule.mail")
                     </div>
                 </div>
 
@@ -88,17 +90,17 @@
                     <div class="txt-anim hover-highlight clickable txt-c-gr"
                           ng-click="va.gridSettings.IsActive=!va.gridSettings.IsActive; RefetchSchedules()">
                         <i ng-class="va.gridSettings.IsActive ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'"
-                           class="glyphicon"></i> active
+                           class="glyphicon"></i> @DEBS.Translate("MessageModule.active")
                     </div>
                     <div class="txt-anim hover-highlight clickable txt-c-gr"
                           ng-click="va.gridSettings.IsUnActive=!va.gridSettings.IsUnActive; RefetchSchedules()">
                         <i ng-class="va.gridSettings.IsUnActive ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'"
-                           class="glyphicon"></i> inactive
+                           class="glyphicon"></i> @DEBS.Translate("MessageModule.inactive")
                     </div>
                 </div>
 
                 <div class="col-xs-2">
-                    Name:
+                    @DEBS.Translate("MessageModule.Name:")
                     <input class="txtinput" type="text" placeholder="..." 
                            ng-model="va.gridSettings.Name" 
                            ng-model-options='{ debounce: 500 }'
@@ -106,7 +108,7 @@
                 </div>
 
                 <div class="col-xs-3">
-                    Base Template Name:
+                    @DEBS.Translate("MessageModule.Base Template Name:")
                     <input class="txtinput" type="text" placeholder="..." 
                            ng-model="va.gridSettings.TemplateName" 
                            ng-model-options='{ debounce: 500 }'
@@ -114,7 +116,7 @@
                 </div>
 
                 <div class="col-xs-2">
-                    Date:
+                    @DEBS.Translate("MessageModule.Date:")
                     <select text-align:center"
                             class="selector" ng-model="va.gridSettings.DateOperator"
                             ng-options="x for x in va.gridSettings.dateoperators"
@@ -128,7 +130,7 @@
                 </div>
 
                 <div class="col-xs-2">
-                    Reapeat Mode:
+                    @DEBS.Translate("MessageModule.Reapeat Mode:")
                     <select text-align:center"
                             class="selector" ng-model="va.gridSettings.RepeatMode"
                             ng-options="x for x in va.gridSettings.repeatmodes"
@@ -148,7 +150,7 @@
             <!-- Grid/Enumeration -->
             <div class="col-xs-12 no-padding clearfix txt-c-gr">
                 <div class="txt-c-grmore txt-s-med" ng-if="va.mschedules.length===0">
-                    There is no matching the query items.
+                    @DEBS.Translate("MessageModule.There is no matching the query items.")
                 </div>
                 <div ng-repeat="sched in va.mschedules" class="ngan-fade-mid">
                     <div class="sched-grid-row row">
@@ -184,7 +186,7 @@
 
         <!-- Editor -->
         <div class="slideable editor-container" ng-if="va.cursched!==null">
-            <a ng-click="hideEditor()">back</a>
+            <a ng-click="hideEditor()">@DEBS.Translate("MessageModule.back")</a>
 
             <!--If Template NOT choosen -->
             <div ng-if="va.cursched.TemplateId===-1" class="editor-container-sub nolayout ngan-fade-fst">
@@ -196,7 +198,7 @@
                 </div>
                 <!--Based on template -->
                 <div>
-                    <span class="txt-c-grmore">Based on Template:</span>
+                    <span class="txt-c-grmore">@DEBS.Translate("MessageModule.Based on Template:")</span>
                     <div ng-repeat="templ in va.templates">
                         <div class="txt-c-gr">
                             <span class="txt-anim hover-highlight txt-c-gr clickable" ng-click="setTempl(templ)">
@@ -231,7 +233,7 @@
 
                         <!--Schedule Date -->
                         <div>
-                            <span class="txt-c-grmore">Schedule Date </span>
+                            <span class="txt-c-grmore">@DEBS.Translate("MessageModule.Schedule Date") </span>
                             <input class="txtinput"
                                    type="datetime-local"
                                    ng-model="va.cursched.ScheduleDate"
@@ -240,7 +242,7 @@
 
                         <!--Repeat Mode -->
                         <div>
-                            <span class="txt-c-grmore">Repeat Mode </span>
+                            <span class="txt-c-grmore">@DEBS.Translate("MessageModule.Repeat Mode") </span>
                             <select text-align:center"
                                     class="selector" ng-model="va.cursched.RepeatMode"
                                     ng-options="x for x in va.repeatmodes"></select>
@@ -260,7 +262,7 @@
 
                         <!--Based on template -->
                         <div>
-                            <span class="txt-c-grmore">Based on Template:</span>
+                            <span class="txt-c-grmore">@DEBS.Translate("MessageModule.Based on Template:")</span>
                             <div ng-repeat="templ in va.templates">
                                 <div class="txt-c-gr">
                                     <span class="txt-anim hover-highlight txt-c-gr clickable" ng-click="setTempl(templ)">
@@ -282,7 +284,7 @@
 
                         <!--Header -->
                         <div>
-                            <span class="txt-c-grmore" style="padding-right:10px">Header: </span>
+                            <span class="txt-c-grmore" style="padding-right:10px">@DEBS.Translate("MessageModule.Header:") </span>
                             <input class="txtinput" type="text" ng-model="va.cursched.MsgHeader"
                                    placeholder="..."
                                    droppable id="{{va.schedsHeader_ElemId}}"
@@ -309,7 +311,7 @@
 
                     <div class="col-xs-4 editor-container-sub nolayout">
                         <!--Widlcards-->
-                        <div class="txt-s-med txt-c-gr">Wildcards</div>
+                        <div class="txt-s-med txt-c-gr">@DEBS.Translate("MessageModule.Wildcards")</div>
 
                         <div>
                             <div class="bounded-block-m">
@@ -327,7 +329,7 @@
 
                     <div class="col-xs-3 no-padding editor-container-sub nolayout">
                         <!--Filters-->
-                        <div class="txt-s-med txt-c-gr">Filters</div>
+                        <div class="txt-s-med txt-c-gr">@DEBS.Translate("MessageModule.Filters")</div>
 
                         <div class="bot-bord">
                             <div ng-repeat="nfilt in va.filters">
@@ -363,7 +365,7 @@
                         </div>
 
                         <!--Recepients-->
-                        <div class="txt-s-med txt-c-gr">Send to Recepient Groups:</div>
+                        <div class="txt-s-med txt-c-gr">@DEBS.Translate("MessageModule.Send to Recepient Groups:")</div>
                         <div>
                             <div ng-repeat="rc in va.reccards">
                                 <div class="txt-c-gr">
@@ -383,9 +385,9 @@
 
                 <!--Save/Cancel-->
                 <div>
-                    <a class="abut" ng-click="SaveSched(va.cursched,false)">Save</a>
-                    <a class="abut" ng-click="hideEditor()">Cancel</a>
-                    <a class="abut" ng-click="SendNow(va.cursched)">Send Now!</a>
+                    <a class="abut" ng-click="SaveSched(va.cursched,false)">@DEBS.Translate("MessageModule.Save")</a>
+                    <a class="abut" ng-click="hideEditor()">@DEBS.Translate("MessageModule.Cancel")</a>
+                    <a class="abut" ng-click="SendNow(va.cursched)">@DEBS.Translate("MessageModule.Send Now!")</a>
                 </div>
 
 
