--- a/ticonet/Views/MessageModule/_ngTemplates.cshtml
+++ b/ticonet/Views/MessageModule/_ngTemplates.cshtml
@@ -1,4 +1,6 @@
-﻿<div ng-controller="TemplatesController"
+﻿@using DEBS = Business_Logic.DictExpressionBuilderSystem
+
+<div ng-controller="TemplatesController"
      data-ng-init="init({
         urls: {
             gettemplates: '@Url.Action("Fetch","Templates")',
@@ -14,7 +16,7 @@
 
     <!-- Enumeration -->
     <div class="col-xs-3 enum-container">
-        <a ng-click="templCreate()"> create new </a>
+        <a ng-click="templCreate()"> @DEBS.Translate("MessageModule.create new") </a>
         <div ng-repeat="templ in va.templates | orderBy: 'Name'">
             <span class="txt-c-gr">
                 <a class="iconclick padd-hor-t" ng-click="templEdit(templ)">
@@ -42,7 +44,7 @@
             </div>
             <!--Base on RFilter-->
             <div>
-                <span class="txt-c-grmore">Based on Filter:</span>
+                <span class="txt-c-grmore">@DEBS.Translate("MessageModule.Based on Filter:")</span>
                 <div ng-repeat="mfilt in va.metafilters">
                     <div class="txt-c-gr">
                         <span class="txt-anim hover-highlight txt-c-gr clickable" ng-click="setMFilt(mfilt)">
@@ -56,8 +58,8 @@
             <!--Type (sms or email) -->
             <div>
                 <span class="txt-c-grmore clickable" ng-click="va.curtemplate.IsSms=!va.curtemplate.IsSms">
-                    <i ng-class="va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick"></i> sms
-                    <i ng-class="!va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick"></i> mail
+                    <i ng-class="va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick"></i> @DEBS.Translate("MessageModule.sms")
+                    <i ng-class="!va.curtemplate.IsSms ? 'glyphicon-check txt-c-gr' : 'glyphicon-unchecked'" class="glyphicon iconclick"></i> @DEBS.Translate("MessageModule.mail")
                 </span>
             </div>
 
@@ -97,7 +99,7 @@
 
             <!--Header -->
             <div>
-                <span class="txt-c-grmore" style="padding-right:10px">Header: </span>
+                <span class="txt-c-grmore" style="padding-right:10px">@DEBS.Translate("MessageModule.Header:") </span>
                 <input class="txtinput" type="text" ng-model="va.curtemplate.MsgHeader"
                        placeholder="..."
                        droppable id="{{va.templatesHeader_ElemId}}"
@@ -122,7 +124,7 @@
                     </div>
                     <!--SendTo-->
                     <div>
-                        <span class="txt-s-med txt-c-gr">Send to Recepient Groups:</span>
+                        <span class="txt-s-med txt-c-gr">@DEBS.Translate("MessageModule.Send to Recepient Groups:")</span>
                         <div ng-repeat="rc in va.reccards">
                             <div class="txt-c-gr">
                                 <span class="txt-anim hover-highlight txt-c-gr clickable" ng-click="SwitchReccard(rc)">
@@ -137,7 +139,7 @@
                 <div class="col-xs-6">
                     <!--Widlcards-->
                     <div>
-                        <span class="txt-s-med txt-c-gr">Wildcards</span>
+                        <span class="txt-s-med txt-c-gr">@DEBS.Translate("MessageModule.Wildcards")</span>
                         <div class="bounded-block-m">
                             <div ng-repeat="wcard in va.wildcards">
                                 <span class="txt-c-gr txt-anim hover-highlight"
@@ -153,11 +155,11 @@
 
             <!--Save/Cancel-->
             <div>
-                <a class="abut" ng-click="templSave()">Save</a>
-                <a class="abut" ng-click="hideEditor()">Cancel</a>
+                <a class="abut" ng-click="templSave()">@DEBS.Translate("MessageModule.Save")</a>
+                <a class="abut" ng-click="hideEditor()">@DEBS.Translate("MessageModule.Cancel")</a>
             </div>
             <div>
-                <a class="abut" ng-click="DEMO()">Save and Get Demo Messages</a>
+                <a class="abut" ng-click="DEMO()">@DEBS.Translate("MessageModule.Save and Get Demo Messages")</a>
                 <hr />
                 <div ng-repeat="msg in va.demomsgs">
                     <div>{{msg.Header}}</div>
