adaptation into Hebrew

--- a/ticonet/Views/MessageModule/_ngMFilters.cshtml
+++ b/ticonet/Views/MessageModule/_ngMFilters.cshtml
@@ -17,7 +17,7 @@
 
     <!-- Enumeration -->
     <div class="col-xs-3 enum-container">
-        <a ng-click="NewMFilt()"> create new </a>
+        <a ng-click="NewMFilt()"> @DEBS.Translate("MessageModule.create new") </a>
         <div ng-repeat="mfil in va.metafilters | orderBy: 'Name'">
             <span class="txt-c-gr">
                 <a class="iconclick padd-hor-t" ng-click="EditMFilt(mfil)">
