--- a/ticonet/Views/MessageModule/_ngMFilters.cshtml
+++ b/ticonet/Views/MessageModule/_ngMFilters.cshtml
@@ -132,7 +132,7 @@
                                         </div>
                                     </div>
                                     <!--Restore deleted item-->
-                                    <div ng-if="rc.ng_ToDelete" class="wildcard item-row" ng-class="{'invalid':rc.Invalid}">
+                                    <div ng-if="rc.ng_ToDelete" class="wildcard item-row">
                                         <span class="txt-c-gr">
                                             {{rc.Name}}
                                         </span>
@@ -198,7 +198,7 @@
                                         </div>
                                     </div>
                                     <!--Restore deleted item-->
-                                    <div ng-if="wc.ng_ToDelete" class="wildcard item-row" ng-class="{'invalid':rc.Invalid}">
+                                    <div ng-if="wc.ng_ToDelete" class="wildcard item-row">
                                         <span class="txt-c-gr">
                                             {{wc.Name}}
                                         </span>
@@ -291,7 +291,7 @@
                                         </div>
                                     </div>
                                     <!--Restore deleted item-->
-                                    <div ng-if="nfilt.ng_ToDelete" class="wildcard item-row" ng-class="{'invalid':rc.Invalid}">
+                                    <div ng-if="nfilt.ng_ToDelete" class="wildcard item-row">
                                         <span class="txt-c-gr">
                                             {{nfilt.Key}}
                                         </span>
